<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>
    <string name="aboutText">Acerca de</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. En cada movimiento, la pieza puede saltar solo una pieza.</string>
    <string name="firstCategoryPrefTitle">Datos personales</string>
    <string name="prefPlayerNameKey">playerName</string>
    <string name="editTextPrefTitle">Nombre del jugador</string>
    <string name="editTextPrefSummary">Pulse para configurar el nombre del jugador</string>
    <string name="secondCategoryPrefTitle">Ajustes del juego</string>
    <string name="preferencesText">Ajustes</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="save">Guardar</string>
    <string name="restore">Recuperar Partida</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Quieres jugar otra partida?</string>
    <string name="txtDialogoReiniciarTitulo">Reiniciar partida</string>
    <string name="txtDialogoReiniciarPregunta">¿Estás seguro que deseas borrar el tablero y reiniciar la partida?</string>
    <string name="txtDialogoGuardarJuegoTitulo">Guardar Partida</string>
    <string name="txtDialogoGuardarJuegoMensaje">Se sobreescribirán partidas anteriores. ¿Estás seguro que deseas guardar?</string>
    <string name="txtDialogoRecuperarJuegoTitulo">Recuperar Partida</string>
    <string name="txtDialogoRecuperarJuegoMensaje">Perderás la partida actual. ¿Estás seguro que deseas recuperar la partida guardada?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>

    <!-- Leaderboard -->
    <string name="leaderboardTitle">Leaderboard</string>
    <string name="leaderboardMessage">Las mejores puntuaciones del juego!</string>
    <string name="resetLeaderboard">Borrar todo</string>
    <string name="rankingTitle">Rank</string>
    <string name="jugadorTitle">Jugador</string>
    <string name="fechahoraTitle">Fecha y Hora</string>
    <string name="fichasLeftTitle">Fichas</string>
    <string name="borrarLeaderboard">Borrar Leaderboard</string>
    <string name="borrarLeaderboardMsg">Perderás el historial de partidas. ¿Estás seguro que deseas borrar el Leaderboard?</string>

</resources>